--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes Project</title>
+        <title>Odin Recipes  Project</title>
     </head>
 
     <body>
+        <p>
+            <a href="https://andrefgoncalves.github.io/">Main page author</a></html>
+        </p>
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
