Add initial CSS setup

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Lasagna Recipe</title>
+        <!-- Reference to CSS stylesheet -->
+        <link rel="stylesheet" href="../style.css"> 
     </head>
 
     <body>
