--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes  Project</title>
+        <!-- Reference to CSS stylesheet -->
+        <link rel="stylesheet" href="style.css"> 
     </head>
 
     <body>
-        <p>
-            <a href="https://andrefgoncalves.github.io/">Main page author</a></html>
-        </p>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="./recipes/hamburger.html">Hamburger</a></li>
-            <li><a href="./recipes/spaghetti.html">Spaghetti</a></li>
-        </ul>
+        
+            <div class="content">
+                <div class="author-link">
+                    <p>
+                        <a href="https://andrefgoncalves.github.io/">Main page author</a></html>
+                    </p>
+                </div>
+                <h1>Odin Recipes</h1>
+                <ul>
+                    <a href="./recipes/hamburger.html">Hamburger</a>
+                    <a href="./recipes/lasagna.html">Lasagna</a>
+                    <a href="./recipes/spaghetti.html">Spaghetti</a>
+                </ul>
+            </div>
+        
     </body>
 </html>
