--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Spaghetti Recipe</title>
+        <!-- Reference to CSS stylesheet -->
+        <link rel="stylesheet" href="../style.css"> 
     </head>
 
     <body>
